# Android-MNN-ML

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jiwon/android_mnn_ml/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mnnnet-native.cpp
app/src/main/cpp/include/MNN/: HalideRuntime.h  ImageProcess.hpp  Interpreter.hpp  MNNDefine.h  MNNForwardType.h  Matrix.h  Rect.h  Tensor.hpp
app/src/main/cpp/libs/includes/MNN/: HalideRuntime.h  Matrix.h
app/src/main/java/com/jiwon/android_mnn_ml/: MainActivity.kt
app/src/main/java/com/jiwon/android_mnn_ml/mnn/: MNNForwardType.java  MNNForwardType.kt  MNNImageProcess.kt  MNNNetInstance.java  MNNNetInstance.kt  MNNNetNative.kt
app/src/main/java/com/jiwon/android_mnn_ml/tensorflow/: Util.kt
app/src/main/java/com/jiwon/android_mnn_ml/tensorflow/lite/: TfliteModel.kt
app/src/main/java/com/jiwon/android_mnn_ml/utility/: Common.kt  TxtFileReader.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jiwon/android_mnn_ml/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
